# fast-yaml

./: .editorconfig  .eslintrc.js  .gitignore  .yarnrc.yml  Cargo.toml  KNOWN_DIFFERENCES.md  README.ja.md  README.md  jest.config.js  package.json
.cargo/: config.toml
.github/workflows/: ci.yml
example/benchmark/: README-benchmark-template.md  README.md  compare-profile.js  memory-profile.js  profile-fast-yaml.js  run-benchmark.js
example/benchmark/data/: bench-100KB.json  bench-10KB.json  bench-1MB.json  test-100KB.yaml  test-10KB.yaml  test-1MB.yaml
example/benchmark/scripts/: bench-fast-yaml.js  bench-js-yaml.js
js/: cli.js  index.cjs  index.d.ts  index.mjs
scripts/: update-yaml-rust2.sh  update-yaml-test-suite.sh
src/: lib.rs  parse.rs  stream.rs  validate.rs
src/yamlpath/: evaluator.rs  mod.rs  parser.rs  types.rs
test/: complex.yaml  example.yaml
test/bench/: run.js
test/cli/: parse.test.js
test/compat/: api-compatibility.test.js  basic.test.js
test/yaml-spec/: yaml-spec.test.js
test/yamlpath/: yamlpath.test.js
