[package]
name = "fast-yaml"
version = "0.1.0"
edition = "2021"
authors = ["libraz <libraz@libraz.net>"]
description = "High-performance YAML parser with js-yaml API compatibility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/libraz/fast-yaml"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "-Oz"]

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]
parallel = []

[dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde-wasm-bindgen = "0.6"
yaml-rust2 = { path = "third_party/yaml-rust2" }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.66", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
